# german-tools

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
src/german_tools/: detect_text.py
test/: test_detect_text.py
