[tool.poetry]
name = "german-tools"
version = "0.1.0"
description = ""
authors = ["Edison Gustavo Muenz <edisongustavo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dropbox = "^11.4.1"
urllib3 = "^1.26.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
boto3 = "^1.17.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
